--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -270,25 +270,17 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「へー。単純な解析ではコーヒーはリスク因子なのに、層別しただけで関連が消えた。バイアスがあるんでしょとは思ったけど、こんなことあるんだ。あれ？ちょっと前こうやって雑談してたとき、オッズ比は層別すると数値が安定しないっていってたっけ？そのせい？」
+私「単純な解析ではコーヒーはリスク因子なのに、層別しただけで関連が消えた。バイアスがあるんでしょとは思ったけど...“計算上のトリック”じゃなくて、何が起きてるの？あれ？ちょっと前こうやって雑談してたとき、オッズ比は層別すると数値が安定しないっていってたっけ？そのせい？」
 ::: 
 
 ::: voice-father
-お父さん「うん、オッズ比は併合可能ではない、non-collapsibleな指標だね。それもあるんだけど、観察研究のほとんどで、交絡の影響は、効果の指標の違いよりずっと大きいんだ」
-::: 
-
-::: voice-daughter
-私「ふむふむ、ってことは、層別解析じゃなくてロジスティック回帰を使わないとだめって話だっけ？」
-::: 
-
-::: voice-father
-お父さん「ううん、層別でもロジスティックでもいいんだけど、喫煙を調整しないといけないって話。実際解析してみると、どっちでもほぼ同じ結果になる。確かめてみようか」
+お父さん「うん、オッズ比は層別したら値が変わりやすい、**併合可能ではない（non-collapsible）**指標だね。それもあるんだけど、ほとんどの観察研究で、交絡の影響は、効果の指標の違いよりずっと大きいんだ。それに、層別オッズ比ではなく、一般化線型モデルでもほぼ同じ結果になる。確かめてみようか」
 ::: 
 :::::::::::::::::::::::::::::::::
 
 ::: {.callout-note title="glm()を用いた膵がんデータの解析"}
 
-交絡調整のための統計手法として、層別解析以外に一般化線型モデルもよく用いられます。オッズ比のモデルであるロジスティック回帰は、`link="logit"`を用いた`glm()`に対応していましたね。以下のコードでは調整前のオッズ比は`smoke`を入れないモデルで、調整後のオッズ比は`smoke`を入れたモデルで推定しています。
+交絡調整のための統計手法として、層別解析以外に一般化線型モデルもよく用いられます。オッズ比のモデルであるロジスティック回帰は、`link="logit"`を用いた`glm()`に、リスク比は`link="log"`に対応していましたね。以下のコードでは調整前のオッズ比・リスク比は`smoke`を入れないモデルで、調整後のオッズ比・リスク比は`smoke`を入れたモデルで推定しています。
 
 ```{r warning=FALSE}
 dat <- data.frame(
@@ -314,16 +306,36 @@ fit_logit2 <- glm(
 )
 odds_ratio2 <- exp(coef(fit_logit2)[["coffee"]])
 print(odds_ratio2)
+
+fit_log1 <- glm(
+  cancer ~ coffee,
+  family  = binomial(link = "log"),
+  weights = n,
+  data    = dat
+)
+risk_ratio1 <- exp(coef(fit_log1)[["coffee"]])
+print(risk_ratio1)
+
+fit_log2 <- glm(
+  cancer ~ coffee+smoke,
+  family  = binomial(link = "log"),
+  weights = n,
+  data    = dat
+)
+risk_ratio2 <- exp(coef(fit_log2)[["coffee"]])
+print(risk_ratio2)
 ```
 :::
 
+### Simpsonのパラドックスが起きる条件
+
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「Simpsonのパラドックスが起きる条件を知りたい？」
+お父さん「どういうとき、調整前後で効果の値が変わるか、その条件を知りたい？」
 ::: 
 
 ::: voice-daughter
-私「そりゃあね。解析方法によってオッズ比が1になるのは不思議だもの」
+私「それ聞く？同じデータなのに解析方法によってオッズ比が1になるのは不思議だもの、決まってるでしょ」
 ::: 
 
 ::: voice-father
@@ -351,23 +363,25 @@ print(odds_ratio2)
 ::: 
 
 ::: voice-father
-お父さん「まとめると、ポイントは3つの変数の相関関係なんだ。第3の因子と曝露に相関があり、さらに第3の因子とアウトカムにも相関があるとき、Simpsonのパラドックスが起きる」
+お父さん「まとめると、ポイントは3つの変数の相関関係なんだ。第3の因子と曝露に相関があり、さらに第3の因子とアウトカムにも相関があるとき、Simpsonのパラドックスが起きる。正確にいうと、これは十分条件で必要条件じゃないんだけどね（田中2022）」
 ::: 
 
 ::: voice-daughter
-私「Simpsonのパラドックスねえ。交絡ってまあまあややこしいね」
+私「曝露とアウトカムと第3の変数の関係性ねえ。交絡の話ってまあまあややこしいね」
 ::: 
 
 ::: voice-father
-お父さん「交絡は言葉自体になじみがないからそう思うだろうけど、もっとシンプルに考えることもできる。研究の原則としてときどき使う"ceteris paribus"というラテン語があってね。"All other things being equal"くらいの意味なんだけど、比較する集団で条件をそろえたら、交絡によるバイアスは生じない」
+お父さん「交絡って、言葉自体になじみがないこともあって複雑に思うだろうけど、実際の研究ではもっとシンプルに考えることもできる。研究の原則としてときどき使う"ceteris paribus"というラテン語があってね。"All other things being equal"くらいの意味なんだけど、比較する集団で条件をそろえたら、交絡によるバイアスは生じない」
 ::: 
 
 ::: voice-daughter
 私「ふーん。まってね、さっきの条件を確認する。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か」
 ::: 
 
+### Simpsonのパラドックスと交絡は同じじゃない？
+
 ::: voice-father
-お父さん「表の意味はそういうことだね。でもね、正確にいうとSimpsonのパラドックスと交絡は、同じ現象じゃない。きちんと統計的に定式化して考えると、交絡はそんなに単純な問題じゃないんだ。層別前の解析は集団全体のオッズ比でしょ」
+お父さん「表の意味はそういうことだね。でもね、正確にいうとSimpsonのパラドックスと交絡は、数学的には異なる現象なんだ。きちんと統計的に定式化して考えると、交絡はそんなに単純な問題じゃない。簡単にいうとね。層別前の解析は集団全体のオッズ比でしょ」
 ::: 
 
 ::: voice-daughter
@@ -383,13 +397,17 @@ print(odds_ratio2)
 ::: 
 
 ::: voice-father
-お父さん「うん。このケースでは喫煙は交絡因子なのは間違いないんだよ。でも、統計学の枠組みで、層別前と層別後のどっちのオッズ比が真値なのか、決めるロジックはないんだ。データがどんな確率分布に従っているか、誰も知らないからね」
+お父さん「うん。この具体例では喫煙は交絡因子なのは間違いないんだよ。でも一般には、層別前と層別後のどっちのオッズ比が真値なのか、統計学の枠組みで決めるロジックはないんだ。データがどんな確率分布に従っているか、誰も知らないからね」
 ::: 
 
 ::: voice-daughter
 私「へー」
 ::: 
 :::::::::::::::::::::::::::::::::
+
+### 文献
+
+- [田中司朗. 医学研究のための因果推論II. Rubin因果モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12271)
 
 ### This concludes the Adjusting for Bias series. If you’d like to keep reading over your next cup of coffee, the following episode are waiting:
 
