--- a/jp/truth.qmd
+++ b/jp/truth.qmd
@@ -156,7 +156,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 
 ------------------------------------------------------------------------
 
-### データとロジスティック回帰の限界
+### ロジスティック回帰の限界
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
@@ -168,7 +168,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「ありがとう。この前のコーヒーと膵がんの話覚えてる？層別解析やロジスティック回帰で**交絡調整**できるよってやつ」
+お父さん「ありがとう。この前のコーヒーと膵がんの話覚えてる？層別解析やロジスティック回帰で交絡を調整したときのこと」
 ::: 
 
 ::: voice-daughter
@@ -200,7 +200,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「真値がわかってないと、どっちの解析が正しいか判断できないんじゃないかっていいたいんだよ。真値でもいいんだけど、ともかくデータとは別の知識や概念が必要だって思わない？」
+お父さん「真値が与えられないと**ただのオッズ比とロジスティック回帰で調整したオッズ比のどっちが正しいか**判断できないんじゃないかっていいたいんだよ。データとは別に、手がかりになるような知識や概念が必要だって思わない？」
 ::: 
 
 ::: voice-daughter
@@ -214,7 +214,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ### Rubin因果モデル
 
 ::: voice-father
-お父さん「今から、"調整"の意味を知るために必要な概念について話すね。これまで出てきた研究を振り返ってみようか。胃がん手術の術式選択もストーマ造設も、その後の予後との因果関係に興味があるんじゃない？正確にいうと、別の術式を選んだり、ストーマを造設しなかったりしたとき、もっといい治療成績が得られたかが、その研究で知りたい真実でしょ」
+お父さん「今から、"交絡調整"の意味を知るために必要な概念について話すね。これまで出てきた研究を振り返ってみようか。胃がん手術の術式選択もストーマ造設も、その後の予後との因果関係に興味があるんじゃない？正確にいうと、別の術式を選んだり、ストーマを造設しなかったりしたとき、もっといい治療成績が得られたかが、その研究で知りたい真実でしょ」
 :::
 
 ::: voice-daughter
@@ -222,11 +222,11 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「残念ながら回帰分析のレールに乗っていたら、その真実にはたどり着けない。確率分布からスタートするんじゃなくて、"原因が変化したら結果はどうなっていたか"という疑問を基礎にして、研究方法を再構築するんだ。因果推論っていう分野の考え方ではね」
+お父さん「残念ながら回帰分析のレールに乗っていたら、その真実にはたどり着けない。確率分布からスタートするんじゃなくて、**原因が変化したら結果はどうなっていたか**という疑問を基礎にして、研究方法を再構築するんだ。因果推論っていう分野の考え方ではね」
 ::: 
 
 ::: voice-daughter
-私「別の方法で解析をやり直せっていいたいの？」
+私「げ。別の方法で解析をやり直せっていいたいの？」
 ::: 
 
 ::: voice-father
@@ -234,11 +234,11 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-daughter
-私「うーん。そうか。JCOG9502だったら、胃がん手術で術式THを選ぶか、術式LTAを選ぶかを決めたいんだものね。標準治療が決まったら全員その術式になるはずだもの、その話は納得だわ。JCOG9502の論文に出ていた生存曲線は、確かにお父さんのいうパラメータになってる。それに確率分布も回帰分析も出てきてない」
+私「うーん。そうか。JCOG9502だったら、胃がん手術で術式THを選ぶか、術式LTAを選ぶかを決めたいんだものね。標準治療が決まったら全員その術式になるはずだもの、その話は納得だわ。JCOG9502の論文に出ていた生存曲線は、確かにお父さんのいうパラメータになってる。それに確率分布も回帰モデルも出てきてない」
 ::: 
 
 ::: voice-father
-お父さん「じゃあがんサバイバー調査の方はどうだろう。ストーマを造設するかどうかをランダム化に割付けた臨床試験があるかどうかは知らないんだけど、やはりJCOG9502と同じように考える。でもこの場合は、ストーマを保有した患者さんが、ストーマ造設しなかった場合のアウトカムは観察できない。仮定の話だからね。だからこの状況では、ストーマ造設しなかった場合のアウトカムを、データから予測することになる。交絡因子のデータやロジスティック回帰を使ってね。この意味でのアウトカムを**潜在結果変数（potential outcome）**っていったりもする」
+お父さん「じゃあがんサバイバー調査の方はどうだろう。ストーマを造設するかどうかをランダム化に割付けた臨床試験があるかどうかは知らないんだけど、やはりJCOG9502と同じように考える。でもこの場合は、ストーマを保有した患者さんが、ストーマ造設しなかった場合のアウトカムは観察できない。仮定の話だからね。だからこの状況では、ストーマ造設しなかった場合のアウトカムを、データから予測することになる。共変量のデータや回帰モデルを使ってね。この意味でのアウトカムを**潜在結果変数（potential outcome）**っていう」
 ::: 
 
 ::: voice-daughter
@@ -246,15 +246,25 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「ランダム化臨床試験は、むしろ"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査は、いわゆる観察研究でしょ。研究仮説がまだ曖昧じゃないかな、特にPatientsとControlsがね。また、ランダム化してないから比較可能性が低いよね。交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない。ここで大切なのは、ロジスティック回帰の結果を、因果関係を考えるための材料として正しく読み解くためには、因果推論の考え方が必要だってこと。ここで話したのは**Rubin因果モデル**っていって因果モデルのひとつなんだけどね」
+お父さん「一番の違いは、ランダム化しているかどうか。そもそもランダム化臨床試験は、"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査は、いわゆる観察研究でしょ。研究仮説やPECOは、どんなに考えても曖昧なところは残る。特にPatientsとControlsがね。それに、比較可能性についても、交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない」
 ::: 
 
 ::: voice-daughter
-私「因果モデルねえ。一般化線型モデルと違うの？」
+私「ふむ」
+::: 
+
+::: voice-father
+お父さん「話を戻すとね。Rubin因果モデルでは、たとえば"全員が術式THで手術を受けたときの結果と術式LTAで手術を受けたときの結果の差"を、真値と考える。つまり潜在結果変数の差が、因果効果の定義なんだ」
+::: 
+
+### じゃあ回帰モデルってなに？
+
+::: voice-daughter
+私「因果モデルねえ。じゃあ一般化線型モデルやCox回帰の解析結果は、なにを見ているの？因果効果とは違うの？」
 :::
 
 ::: voice-father
-お父さん「違いを一言でいうと、一般化線型モデルはデータが生じる構造、因果モデルは因果関係の構造を表している。**データが発生する背後に因果モデルがある**っていう階層的な関係っていえばいいかな。さっき潜在結果変数って出てきたでしょ」
+お父さん「やっとここまで来たね。実はね、回帰モデルと因果モデルは"二階建て"になっている。まずこの区別を知るだけで、混乱の7割は消えてしまう。一言でいうと、**一般化線型モデルはデータが生じる構造、因果モデルは因果関係の構造**を表している。データが発生する背後に因果モデルがあるっていう階層的な関係っていえばいいかな。さっき潜在結果変数って出てきたでしょ」
 :::
 
 ::: voice-daughter
@@ -262,7 +272,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 :::
 
 ::: voice-father
-お父さん「でてきた。たとえば術式THで胃がん手術を受けた患者が、もし術式LTAだったとしたらっていう仮想的なアウトカムのことを潜在結果変数っていうんだ。潜在結果変数は観測できないでしょ。別の治療なんだから」
+お父さん「でてきた。ほら、術式THで手術を受けた患者が、もし術式LTAだったとしたらっていうやつ。潜在結果変数は観測できないでしょ。別の治療なんだから」
 :::
 
 ::: voice-daughter
@@ -270,25 +280,38 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 :::
 
 ::: voice-father
-お父さん「そういうこと。もし別の治療を選んでいたら...について推測するのが、Rubin因果モデル。きちんと考えたら理解できる考え方でしょ。でも研究現場やデータを少し高いところから眺めているようで、実感はしにくいかもしれない。でも因果の問いは、世界の仕組みを抽象化して再構築しないと答えられないんだ」
+お父さん「そういうこと。因果効果、すなわち潜在結果変数の差はどれくらいか？という仮説について推測するのが、Rubin因果モデル。途中まで納得してたじゃない」
 :::
+
+::: voice-daughter
+私「因果効果の定義については理解した。でも、それなら最初からロジスティック回帰じゃなくてRubin因果モデルを教えてよ」
+:::
+
+::: voice-father
+お父さん「ああ、もしかしたらまだ混乱があるのかもしれない。ロジスティック回帰や層別解析を使っちゃいけないわけじゃないよ。大切なのは、ロジスティック回帰の結果を、因果関係を考えるための材料として正しく読み解くためには、因果推論の考え方が必要だってこと」
+:::
+
 
 ### 研究仮説
 
-::: voice-daughter
+::: voice-father
 お父さん「はい、コーヒーのおかわり。ミルクはいる？」
 ::: 
 
-::: voice-father
+::: voice-daughter
 私「いる。お父さんの言いたいことわかってきたよ。データを集めてロジスティック回帰をすると、自動的に結論が出るわけじゃないんだ。それは、うちの診療科だけのデータでRを試してたときから気づいてたよ。有意だったら因果関係あり、有意じゃなかったら因果関係なしみたいに、白黒はっきりしてないんだなって。でも、どんな集団が解析対象なのかや、ストーマ保有者をどんな集団と比べているのか、足りない交絡因子はなにかなど、どの部分の詰めが甘いのかがだんだん見えてきた」
 ::: 
 
 ::: voice-father
-お父さん「それはよかった。最近は昔よりもデータ駆動型の統計手法を使うことが増えたからね。ロジスティック回帰も使い方によってはそうなる。でも、研究仮説がいい加減だったら、データを集めても何も出てこないよ。それに、ランダム化臨床試験のようにいいデザインを選べば、その分だけ研究結果の質も高くなる。ほら、前にいったかもしれないけど、統計学の目標はランダム誤差とバイアスをコントロールすることだからね」
+お父さん「それはよかった。最近は昔よりもデータ駆動型の統計手法を使うことが増えたからね。ロジスティック回帰はそういう使われ方もする。でも、研究仮説がいい加減だったら、データを集めても何も出てこないよ。それに、ランダム化臨床試験のようにいいデザインを選べば、その分だけ研究結果の質も高くなる。ほら、前にいったかもしれないけど、統計学の目標はランダム誤差とバイアスをコントロールすることだからね」
 ::: 
 
 ::: voice-daughter
-お父さん「あーそんな話してたね。バイアスって真値から系統的にずれていることだっけ。そうすると真値を決めないとバイアス調整もできないことになる。逆算していくと、研究仮説の形でどんな真実が知りたいのかを言語化しなきゃ、統計解析が正しいかどうかも決まらないんだ」
+私「あーそんな話してたね。バイアスって真値から系統的にずれていることだっけ。そうすると真値を決めないとバイアス調整もできないことになる。逆算していくと、研究仮説の形でどんな真実が知りたいのかを言語化しなきゃ、統計解析が正しいかどうかも決まらないんだ」
+::: 
+
+::: voice-father
+お父さん「そうなんだよね。研究仮説や因果モデルは抽象概念だから、それをフィルターにした研究の見方は、調査票やデータを少し高いところから眺めているようで実感に欠けるかもしれない。でも治療効果や予防方法に関する仮説は、自然の摂理ではなく、**よりよい医療技術はどれか**という人間側の問いなんだ。ここを意識するだけで因果の景色が変わる」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
