--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -160,7 +160,7 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では**交絡因子（confounder）**を調整しないといけない、とかいってたよね」
+私「お父さん、ロジスティック回帰でわからないことがあるんだけど。観察研究では**交絡因子（confounder）**を調整しないといけないって前にいってたよね」
 ::: 
 
 ::: voice-father
@@ -168,19 +168,19 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 ::: 
 
 ::: voice-daughter
-私「交絡調整について解説してくれない？統計学の本を読んでも、書いてなくて」
+私「でも統計学の本を読んでも、なにをどう調整するのか書いてないんだよ」
 ::: 
 
 ::: voice-father
-お父さん「じゃあちょっと時間をかけて説明させてよ。」
+お父さん「いいよ。でも少し長くなる。コーヒーでも飲みながらでいい？」
 :::
 
 ::: voice-daughter
-私「いいよ、ありがとう」
+私「賛成」
 ::: 
 
 ::: voice-father
-お父さん「疫学の分野での話なんだけどね。40年前に、コーヒーが膵がんを増やすんじゃないか、っていう論文がでたことがある」
+お父さん「疫学では有名な話なんだけどね。40年前に、"コーヒーを飲むと膵がんリスクが上がる"という論文がでたことがあった」
 ::: 
 
 ::: voice-daughter
@@ -188,7 +188,7 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 ::: 
 
 ::: voice-father
-お父さん「そうでしょ。でも、疫学研究では、コーヒーを飲んでいる人のような曝露集団と、うまく比較できるようなコントロールを選ぶことは、ほとんどの場合難しい。だから、疫学の教科書では、コントロールと比較するときには、第3の因子が隠れていないかどうかに注意しなければいけないと書いてある」
+お父さん「そうでしょ。でも、疫学研究では、コーヒーを飲む習慣のある集団と、きちんと比較できるようなコントロールを選ぶことは難しい。だから疫学の教科書では、集団同士を比較するときには、第3の因子が隠れていないか注意せよと、必ず書いてある」
 ::: 
 
 ::: voice-daughter
@@ -196,7 +196,7 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 ::: 
 
 ::: voice-father
-お父さん「それでは問題です。コーヒーと膵がんの論文で、実際に問題になった第3の因子はなんでしょう？」
+お父さん「それでは問題です。このコーヒー論争で、実際に問題になった第3の因子はなんでしょう？」
 ::: 
 
 ::: voice-daughter
@@ -222,15 +222,15 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 ::: 
 
 ::: voice-father
-お父さん「じゃあさ、こういう第3の因子を無視して解析してしまうとどうなる？」
+お父さん「じゃあさ、こういう第3の因子を無視して解析するとどうなる？」
 ::: 
 
 ::: voice-daughter
-私「それくらいわかるよ。バイアスが生じるんでしょ」
+私「それくらいわかるよ。バイアスが入るんでしょ」
 ::: 
 
 ::: voice-father
-お父さん「そういうこと。これが疫学でいう交絡因子。交絡因子を調整したときとしないときで、まったく違った結果が得られるっていう数値例を示そう」
+お父さん「そういうこと。これが疫学でいう交絡因子。交絡調整の意味は数字で示すと一番早い。Simpson のパラドックスを使って説明しよう」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -270,11 +270,11 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「単純な解析ではコーヒーはリスク因子なのに、層別しただけで関連が消えた。バイアスがあるんでしょとは思ったけど...“計算上のトリック”じゃなくて、何が起きてるの？あれ？ちょっと前こうやって雑談してたとき、オッズ比は層別すると数値が安定しないっていってたっけ？そのせい？」
+私「単純な解析ではリスク因子だったのに、層別しただけで関連が消えた。でもこれは“計算上のトリック”じゃないよね？以前こうやって雑談してたとき、オッズ比は層別すると数値が安定しないっていってたのは関係ある？」
 ::: 
 
 ::: voice-father
-お父さん「うん、オッズ比は層別したら値が変わりやすい、**併合可能ではない（non-collapsible）**指標だね。それもあるんだけど、ほとんどの観察研究で、交絡の影響は、効果の指標の違いよりずっと大きいんだ。それに、層別オッズ比ではなく、一般化線型モデルでもほぼ同じ結果になる。確かめてみようか」
+お父さん「部分的に関係はある。オッズ比は層別したら値が変わりやすい、**併合可能ではない（non-collapsible）**指標だからね。でも、それより重要なことは、ほとんどの観察研究で、交絡の影響は、効果の指標の違いよりずっと大きいということ。層別で関連が消える現象は、一般化線型モデルでも再現できるよ」
 ::: 
 :::::::::::::::::::::::::::::::::
 
@@ -331,15 +331,7 @@ print(risk_ratio2)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「どういうとき、調整前後で効果の値が変わるか、その条件を知りたい？」
-::: 
-
-::: voice-daughter
-私「それ聞く？同じデータなのに解析方法によってオッズ比が1になるのは不思議だもの、決まってるでしょ」
-::: 
-
-::: voice-father
-お父さん「じゃあ説明するね。まず前提になるのが、喫煙が膵がんのリスク因子だってこと。これはいいよね」
+お父さん「なにが起きたか整理しよう。まず前提になるのが、喫煙が膵がんのリスク因子だってこと。これはいいよね」
 ::: 
 
 ::: voice-daughter
@@ -363,7 +355,14 @@ print(risk_ratio2)
 ::: 
 
 ::: voice-father
-お父さん「まとめると、ポイントは3つの変数の相関関係なんだ。第3の因子と曝露に相関があり、さらに第3の因子とアウトカムにも相関があるとき、Simpsonのパラドックスが起きる。正確にいうと、これは十分条件で必要条件じゃないんだけどね（田中2022）」
+お父さん「Simpsonのパラドックスのポイントは3つの変数の相関関係なんだ」
+::: 
+
+- 第3の因子と曝露の間に相関がある
+- 第3の因子とアウトカムの間に相関がある
+
+::: voice-father
+お父さん「この2つの条件が揃うとSimpsonのパラドックスが起きる。正確にいうと、これは十分条件で必要条件じゃないんだけどね（田中2022）」
 ::: 
 
 ::: voice-daughter
@@ -374,14 +373,15 @@ print(risk_ratio2)
 お父さん「交絡って、言葉自体になじみがないこともあって複雑に思うだろうけど、実際の研究ではもっとシンプルに考えることもできる。研究の原則としてときどき使う"ceteris paribus"というラテン語があってね。"All other things being equal"くらいの意味なんだけど、比較する集団で条件をそろえたら、交絡によるバイアスは生じない」
 ::: 
 
+
+### Simpsonのパラドックスと交絡は同じ概念ではない？
+
 ::: voice-daughter
-私「ふーん。まってね、さっきの条件を確認する。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か」
+私「さっきの2つの条件を確認する時間がほしいな。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か」
 ::: 
 
-### Simpsonのパラドックスと交絡は同じじゃない？
-
 ::: voice-father
-お父さん「表の意味はそういうことだね。でもね、正確にいうとSimpsonのパラドックスと交絡は、数学的には異なる現象なんだ。きちんと統計的に定式化して考えると、交絡はそんなに単純な問題じゃない。簡単にいうとね。層別前の解析は集団全体のオッズ比でしょ」
+お父さん「表で起きたことはそういうことで、これがSimpsonのパラドックスだね。でもね、正確にいうとSimpsonのパラドックスと交絡は、数学的には異なる現象なんだ。交絡はそんなに単純な問題じゃない。直感的な説明をするとね。層別前の解析は集団全体のオッズ比でしょ」
 ::: 
 
 ::: voice-daughter
@@ -397,7 +397,7 @@ print(risk_ratio2)
 ::: 
 
 ::: voice-father
-お父さん「うん。この具体例では喫煙は交絡因子なのは間違いないんだよ。でも一般には、層別前と層別後のどっちのオッズ比が真値なのか、統計学の枠組みで決めるロジックはないんだ。データがどんな確率分布に従っているか、誰も知らないからね」
+お父さん「うん。この事例でいえば喫煙が交絡因子なのは間違いないんだよ。でも一般には、層別前と層別後のどっちのオッズ比が真値なのか、統計学の枠組みで決めるロジックはないんだ。データがどんな確率分布に従っているか、誰も知らないからね」
 ::: 
 
 ::: voice-daughter
