--- a/jp/truth.qmd
+++ b/jp/truth.qmd
@@ -160,7 +160,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「コーヒー淹れてくれる？」
+お父さん「熱いコーヒー淹れてくれる？」
 ::: 
 
 ::: voice-daughter
@@ -168,7 +168,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「ありがとう。この前のコーヒーと膵がんの話覚えてる？層別解析やロジスティック回帰で交絡を調整したときのこと」
+お父さん「ありがとう。この前の"コーヒーと膵がん"の話、覚えてる？層別解析やロジスティック回帰で交絡を調整したときのこと」
 ::: 
 
 ::: voice-daughter
@@ -176,23 +176,23 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「あのとき、喫煙が交絡因子の一例だったよね。喫煙を調整した結果が正しいと思う？それとも調整しない結果が正しい？」
+お父さん「じゃあ、ひとつ考えてみようか。喫煙が交絡因子だったよね。喫煙を調整した結果と調整しない結果がある。どっちを報告する？」
 ::: 
 
 ::: voice-daughter
-私「ん？調整した方がいいでしょ、そりゃ」
+私「ん？そりゃ調整した方でしょ」
 ::: 
 
 ::: voice-father
-お父さん「そう思うよね。じゃあ、交絡因子AとBがあったとするね。AとBはともに曝露とアウトカムの関係をゆがめている。AとBを調整したときのオッズ比を、仮に3だとしよう。Aだけ調整したらオッズ比は2、どちらも調整しなかったらオッズ比は3だとする。Aだけ調整した結果と調整しない結果、どちらが正しい？」
+お父さん「だよね。でも交絡因子がAとBの2つあって、ともに曝露とアウトカムの関係をゆがめているとする。AとBの両方を調整したときのオッズ比を、仮に3だとしよう。Aだけ調整したらオッズ比は2、どちらも調整しなかったらオッズ比は3。さあ、Aだけ調整した結果とどちらも調整しない結果、どちらが正しいと思う？」
 ::: 
 
 ::: voice-daughter
-私「え？えーっと、調整しないオッズ比は真値の3に一致するんでしょ。調整しない方が正しいよね」
+私「え？えーっと、真値が3なんだから、調整しないほう？」
 ::: 
 
 ::: voice-father
-お父さん「ところがね、Bのデータは集めてなくて調整できなかったとする。そうしたらAとBを調整したときのオッズ比が3だってわからないよね。この状況でも調整しない方が正しい？」
+お父さん「ところがね、Bのデータはそもそも集めていなかったら？"AとBを調整したときオッズ比は3"なんてわからないよね。これでも"調整しない方が正しい"？」
 ::: 
 
 ::: voice-daughter
@@ -200,7 +200,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「真値が与えられないと**ただのオッズ比とロジスティック回帰で調整したオッズ比のどっちが正しいか**判断できないんじゃないかっていいたいんだよ。データとは別に、手がかりになるような知識や概念が必要だって思わない？」
+お父さん「真値が見えない状況では、**ただのオッズ比とロジスティック回帰で調整したオッズ比のどちらが真実に近いかなんていえない**ってことだよ。データとは別に、手がかりになるような知識や概念が必要だって思わない？」
 ::: 
 
 ::: voice-daughter
@@ -208,13 +208,13 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「わかるけど、もうちょっとつきあって。この前話したSimpsonのパラドックスは数字のパズルではないし、どっちの解析が正しいかっていうのも言葉遊びじゃない。データと真値の関係をどうとらえるか。その関係性そのものがひっくり返っているんだ。そろそろ本当のことを話そう」
+お父さん「気持ちはわかるけど、もうちょっとつきあって。この前のSimpsonのパラドックスは数字のパズルではないし、どっちの解析が正しいかという命題も言葉遊びじゃない。データと真値の関係をどう認識するかに関わる問題なんだ。専門家以外のほとんどが、両者の関係性を真逆にとらえている。そろそろ本当のことを話そう」
 :::
 
 ### Rubin因果モデル
 
 ::: voice-father
-お父さん「今から、"交絡調整"の意味を知るために必要な概念について話すね。これまで出てきた研究を振り返ってみようか。胃がん手術の術式選択もストーマ造設も、その後の予後との因果関係に興味があるんじゃない？正確にいうと、別の術式を選んだり、ストーマを造設しなかったりしたとき、もっといい治療成績が得られたかが、その研究で知りたい真実でしょ」
+お父さん「今から、"交絡調整"の意味を知るために必要な概念について話すね。これまでの例を思い出してごらん。胃がん手術の術式、ストーマ造設、コーヒー摂取、どれも知りたいのは"違う選択をしていたら結果はどうなったか"じゃない？」
 :::
 
 ::: voice-daughter
@@ -222,7 +222,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「残念ながら回帰分析のレールに乗っていたら、その真実にはたどり着けない。確率分布からスタートするんじゃなくて、**原因が変化したら結果はどうなっていたか**という疑問を基礎にして、研究方法を再構築するんだ。因果推論っていう分野の考え方ではね」
+お父さん「残念ながら回帰分析のレールに乗ったままでは、その真実にはたどり着けない。必要なのは、確率分布を前提にするのではなく、**原因を変えたら結果はどうなっていたか**という疑問からスタートすること。因果推論はその問いに答えるための方法論なんだ」
 ::: 
 
 ::: voice-daughter
@@ -230,15 +230,15 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「ちがうちがう、今は抽象的な話をしている。たとえば実薬とプラセボを比較するランダム化臨床試験だったらどう？全員に実薬を投与した結果とプラセボを投与した結果の差が知りたいんじゃない？差はなんでもいいんだけど、たとえば生存曲線の差をイメージしてくれたらいい。プラセボから実薬に変えたときに生じるかもしれない生存曲線の差、これが因果関係を表すパラメータなんだ」
+お父さん「ちがうちがう、今は抽象的な話をしている。たとえば実薬とプラセボを比較するランダム化臨床試験だったらどう？全員に実薬を投与した結果とプラセボを投与した結果の差が知りたいんじゃない？それがOSなら生存曲線の差になる。この差こそが**因果効果**なんだ」
 ::: 
 
 ::: voice-daughter
-私「うーん。そうか。JCOG9502だったら、胃がん手術で術式THを選ぶか、術式LTAを選ぶかを決めたいんだものね。標準治療が決まったら全員その術式になるはずだもの、その話は納得だわ。JCOG9502の論文に出ていた生存曲線は、確かにお父さんのいうパラメータになってる。それに確率分布も回帰モデルも出てきてない」
+私「うーん。そうか。JCOG9502だったら、胃がん手術で術式THを選ぶか、術式LTAを選ぶかを決めたいんだものね。標準治療が決まったら全員その術式になるはずだもの、その話は納得だわ。論文に出ていた生存曲線の差が因果効果にあたるわけか。確かに、そこに確率分布も回帰モデルも出てこないね」
 ::: 
 
 ::: voice-father
-お父さん「じゃあがんサバイバー調査の方はどうだろう。ストーマを造設するかどうかをランダム化に割付けた臨床試験があるかどうかは知らないんだけど、やはりJCOG9502と同じように考える。でもこの場合は、ストーマを保有した患者さんが、ストーマ造設しなかった場合のアウトカムは観察できない。仮定の話だからね。だからこの状況では、ストーマ造設しなかった場合のアウトカムを、データから予測することになる。共変量のデータや回帰モデルを使ってね。この意味でのアウトカムを**潜在結果変数（potential outcome）**っていう」
+お父さん「そう。でも、がんサバイバー調査は観察研究で、ランダム化されていない。JCOG9502と同じように考えたくても、"仮にストーマを造設しなかった場合のアウトカム"は存在しない。仮定の話だからね。だからこの観察研究では、観測できないアウトカムを、共変量や回帰モデルで予測するしかない。この観測できないけど定義できるアウトカムは**潜在結果変数（potential outcome）**と呼ばれている」
 ::: 
 
 ::: voice-daughter
@@ -246,7 +246,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「一番の違いは、ランダム化しているかどうか。そもそもランダム化臨床試験は、"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査は、いわゆる観察研究でしょ。研究仮説やPECOは、どんなに考えても曖昧なところは残る。特にPatientsとControlsがね。それに、比較可能性についても、交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない」
+お父さん「一番の違いは、ランダム化しているかどうか。そもそもランダム化臨床試験は、"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査のような観察研究では、研究仮説やPECOをどんなに慎重に考えても、曖昧なところは残る。特にPatientsとControlsがね。比較可能性についても、交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない」
 ::: 
 
 ::: voice-daughter
@@ -254,45 +254,36 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「話を戻すとね。Rubin因果モデルでは、たとえば"全員が術式THで手術を受けたときの結果と術式LTAで手術を受けたときの結果の差"を、真値と考える。つまり潜在結果変数の差が、因果効果の定義なんだ」
+お父さん「話を戻そう。Rubin因果モデルは、解析するモデルや交絡調整について考える前に、潜在結果変数を定義し、その差について推測するんだ」
 ::: 
 
-### じゃあ回帰モデルってなに？
+### 回帰モデルって結局なに？
 
 ::: voice-daughter
-私「因果モデルねえ。じゃあ一般化線型モデルやCox回帰の解析結果は、なにを見ているの？因果効果とは違うの？」
+私「やっぱりわからないな。一般化線型モデルやCox回帰の結果って、なにを見てるの？因果効果とは違うの？」
 :::
 
 ::: voice-father
-お父さん「やっとここまで来たね。実はね、回帰モデルと因果モデルは"二階建て"になっている。まずこの区別を知るだけで、混乱の7割は消えてしまう。一言でいうと、**一般化線型モデルはデータが生じる構造、因果モデルは因果関係の構造**を表している。データが発生する背後に因果モデルがあるっていう階層的な関係っていえばいいかな。さっき潜在結果変数って出てきたでしょ」
+お父さん「やっとここまで来たね。実はね、回帰モデルと因果モデルは"二階建て"になっている」
+:::
+
+- 回帰モデル: データがどう生じるかを記述する構造
+- 因果モデル: 原因を変えたら結果はどうなっていたかを表す構造
+
+::: voice-father
+お父さん「データが発生する背後に因果モデルがあるという階層的な関係になっているといえばいいかな。ほら、さっきいったように潜在結果変数は観測できないでしょ」
 :::
 
 ::: voice-daughter
-私「でてきたっけ」
+私「そうね、そういわれると確かに因果関係の真実は、データの発生する背後にあるわね。そこまでは理解した。でも、それならどうして最初からロジスティック回帰じゃなくてRubin因果モデルを教えなかったの？」
 :::
 
 ::: voice-father
-お父さん「でてきた。ほら、術式THで手術を受けた患者が、もし術式LTAだったとしたらっていうやつ。潜在結果変数は観測できないでしょ。別の治療なんだから」
-:::
-
-::: voice-daughter
-私「もちろん。そうね、そういわれると確かに因果関係の真実は、データの発生する背後にあるわね」
-:::
-
-::: voice-father
-お父さん「そういうこと。因果効果、すなわち潜在結果変数の差はどれくらいか？という仮説について推測するのが、Rubin因果モデル。途中まで納得してたじゃない」
-:::
-
-::: voice-daughter
-私「因果効果の定義については理解した。でも、それなら最初からロジスティック回帰じゃなくてRubin因果モデルを教えてよ」
-:::
-
-::: voice-father
-お父さん「ああ、もしかしたらまだ混乱があるのかもしれない。ロジスティック回帰や層別解析を使っちゃいけないわけじゃないよ。大切なのは、ロジスティック回帰の結果を、因果関係を考えるための材料として正しく読み解くためには、因果推論の考え方が必要だってこと」
+お父さん「ああ、もう少し説明が必要だね。ロジスティック回帰や層別解析を使っちゃいけないわけじゃない。ロジスティック回帰の結果を、因果関係を考えるための材料として正しく読み解くためには、因果推論の考え方が必要だってことがいいたいんだ」
 :::
 
 
-### 研究仮説
+### 研究仮説が因果効果を決める
 
 ::: voice-father
 お父さん「はい、コーヒーのおかわり。ミルクはいる？」
@@ -303,15 +294,15 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「それはよかった。最近は昔よりもデータ駆動型の統計手法を使うことが増えたからね。ロジスティック回帰はそういう使われ方もする。でも、研究仮説がいい加減だったら、データを集めても何も出てこないよ。それに、ランダム化臨床試験のようにいいデザインを選べば、その分だけ研究結果の質も高くなる。ほら、前にいったかもしれないけど、統計学の目標はランダム誤差とバイアスをコントロールすることだからね」
+お父さん「それはよかった。最近は昔よりもデータ駆動型の統計手法を使うことが増えたから、そのせいもある。でも、どんな真実を知りたいのか言葉にしないと、正しい解析も存在しない。ランダム化臨床試験のように研究仮説を立てて、それにあわせて研究計画書を書けば、比較にならないくらい研究結果の質も高くなる。ランダム誤差とバイアスをコントロールできるように研究をデザインできるからね」
 ::: 
 
 ::: voice-daughter
-私「あーそんな話してたね。バイアスって真値から系統的にずれていることだっけ。そうすると真値を決めないとバイアス調整もできないことになる。逆算していくと、研究仮説の形でどんな真実が知りたいのかを言語化しなきゃ、統計解析が正しいかどうかも決まらないんだ」
+私「確かに、的の中心が決まらないと、矢の狙いが偏っているか調整もできないな。逆算すると、研究仮説の形で真値を固めておかないと、オッズ比が正しいかどうか判断できないんだ」
 ::: 
 
 ::: voice-father
-お父さん「そうなんだよね。研究仮説や因果モデルは抽象概念だから、それをフィルターにした研究の見方は、調査票やデータを少し高いところから眺めているようで実感に欠けるかもしれない。でも治療効果や予防方法に関する仮説は、自然の摂理ではなく、**よりよい医療技術はどれか**という人間側の問いなんだ。ここを意識するだけで因果の景色が変わる」
+お父さん「そう。研究仮説や因果モデルは、調査票やデータよりずっと抽象的に見えるよね。だけどこれは医療者の疑問そのもの。治療効果や予防方法に関する仮説は、自然の摂理ではなく、**よりよい医療技術はどれか**という人間側の問いなんだ」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
