--- a/jp/truth.qmd
+++ b/jp/truth.qmd
@@ -254,7 +254,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 :::
 
 ::: voice-father
-お父さん「違いを一言でいうと、一般化線型モデルはデータが生じる構造、因果モデルは因果関係の構造を表している。**データが発生する背後に因果モデルがある**っていう階層的な関係っていえばいいかな。さっき潜在結果変数って出てきたでしょ」
+お父さん「違いを一言でいうと、一般化線型モデルはデータが生じる構造、因果モデルは因果関係の構造を表している。**データが発生する背後に因果モデルがある**っていう階層的な関係になってるっていえばいいかな。さっき潜在結果変数って出てきたでしょ」
 :::
 
 ::: voice-daughter
