--- a/jp/frequentist-4.qmd
+++ b/jp/frequentist-4.qmd
@@ -436,7 +436,7 @@ print(coverage_800)
 :::
 
 ::: voice-father
-お父さん「そういうこと。表では復職率をπという変数で表しているんだけど、”π=0.5”と”信頼区間幅0.2”に対応する数字をみて。93って書いてあるでしょ。これが必要サンプルサイズ」
+お父さん「そういうこと。表では復職率を$\pi$という変数で表しているんだけど、”$\pi=0.5$”と”信頼区間幅0.2”に対応する数字をみて。93って書いてあるでしょ。これが必要サンプルサイズ」
 :::
 
 ::: voice-daughter
