--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -165,7 +165,7 @@ Keywords: clinical trial, simulation, study design, observational study, p-value
 :::
 
 ::: voice-daughter
-私「なに？お父さん、真面目な顔して」
+私「なに？お父さん、たばこくわえながら真面目な顔して」
 :::
 
 ::: voice-father
@@ -447,12 +447,12 @@ ssizeCT.default(
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「割付け比Kが1（1:1）、0.5（2:1）、0.25（4:1）だと、必要サンプルサイズ（nE+nC）は100+100人から19+118人、41+161人に変化するみたいだね」
+お父さん「割付け比$K$が1（1:1）、0.5（2:1）、0.25（4:1）だと、必要サンプルサイズ（$nE+nC$）は100+100人から19+118人、41+161人に変化するみたいだね」
 :::
 
 
 ::: voice-daughter
-私「えー、Kってストーマありの割合だよね、そんなのまだわからないもの。思ったより人数が必要かもってことだよね。調査する施設を増やすかどうか考えないと」
+私「えー、$K$ってストーマありの割合だよね、そんなのまだわからないもの。思ったより人数が必要かもってことだよね。調査する施設を増やすかどうか考えないと」
 :::
 
 ::: voice-father
