--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -142,12 +142,9 @@ a:hover {
 
 # コーヒーを淹れて、言葉を交わす。湯気とともに時は流れ、統計の世界が少しずつ広がっていく。
 
-このサイトは、統計家の父と医師の娘が交わす小さなコーヒーチャットから生まれました。
-日常の疑問、論文で気になるまま読み進めた箇所、ふと理解が曖昧なままにしていた概念—それらを対話のペースでやわらかく解きほぐしていきます。
+このサイトは、統計家の父と医師の娘が交わす小さなコーヒーチャットから生まれました。研究で生じる疑問、論文でひっかかった数字、そしてときおり見える研究者たちの姿勢—大切なはずのことは、生活・臨床・因果・データ・認識・言語という複数のレイヤーにひっそりと散らばっています。コーヒーを交えた軽いやりとりは、そのいくつかを丁寧に拾っていきます。まるでその全体性（totality）を壊さぬよう、ふたりの研究の歩みをひとつの物語として紡ぐように。
 
-難しい統計手法や数式も、冬のマグカップから感じるぬくもりのように、温度のある言葉でそっと説明します。
-物語はRコードで再現可能。
-深く学びたい人も、少し立ち止まりたい人も、会話がもたらす数学的世界観への気づきを、どうぞゆっくり味わってください。
+生存曲線、p値の誤解から、因果と統計の階層的な関係まで。螺旋のように伏線を潜ませつつ、冬のマグカップのように温度のある言葉で語ります。数式や医療の話題も出てきますが、必要なところだけ拾ってくだされば大丈夫です。物語はRコードで再現可能。ふたりの対話とともに変化する世界観を、どうぞゆっくりと味わってください。
 
 ------------------------------------------------------------------------
 
@@ -201,7 +198,7 @@ a:hover {
 
 ### 5. Adjusting for bias — 回帰分析の風景
 
-**ロジスティック回帰**の表の作り方、結果の見方から、使用上の落とし穴まで、父の手ほどきを受けるエピソード。
+**ロジスティック回帰**の結果の見方、表の作り方から、使用上の落とし穴まで、父の手ほどきを受けるエピソード。そして...。
 
 - [From 2×2 Tables to Logistic Regression]
 - [How to Read Logistic Regression Coefficients]
@@ -213,14 +210,13 @@ a:hover {
 
 - [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
 
-
 ### 6. Truth — 真値
 
 - [What Is It That You Want to Know?]
 
 ### 7. Causal inference — 因果を見つけるために
 
-有効非循環グラフ（DAG）、共通原因、合流点、中間媒介因子、バックドア条件。「もし〜だったら？」を統計的に考えるための**因果の言葉**を、できるだけ数式を使わずに扱います。
+有効非循環グラフ（DAG）、共通原因、合流点、中間媒介因子、バックドア基準。「もし〜だったら？」を統計的に考えるための**因果の言葉**を、確率に関する必要最小限の数式を交えて扱います。
 
 - [Causal inference I]
 - [Causal inference II]
@@ -241,13 +237,11 @@ a:hover {
 
 ## 読み方
 
-- まずは **Study design I–V** だけ読めば、  
-  「どんな問いを立てて、どんなデータを集めるか」というゴールの輪郭が見えてきます。
-- 興味で選ぶなら：
-  - **論文の読み方の足場をつくりたい** → Frequentist thinking / Effects and time
-  - **解析まわりをもう少しきちんとしたい** → Adjusting for bias
-  - **因果の考え方を整理したい** → Causal inference
-  - **最終的に論文として形にしたい** → Publishing a paper
-- どのエピソードも、それだけで読めるように書いていますが、  
-  通して読むと「研究という営み」の地図が、少しずつ頭の中にできあがっていきます。  
-  お好みの飲み物を片手に、気になったところから読んでみてください。
+まずは **Study design I–V**を読めば、臨床研究の風景や「どんな問いを立てて、どんなデータを集めるか」という輪郭が見えてきます。そこから先は物語を追っても、興味の向くレイヤーを選んでも構いません。
+
+- **論文を読む足場を整えたい**: Frequentist thinking
+- **数字の意味や統計解析の実際をもう少し深く知りたい**: Effects and time / Adjusting for bias
+- **因果という見えない構造を整理したい**: Causal inference
+- **研究を形にして届けるところまで見通したい**: Publishing a paper
+
+どのエピソードも独立して構成されていますが、全体を読むと、生活・臨床・因果・データ・認識・言語がひとつの流れとしてつながり、研究という営みの地図が、少しずつ頭の中にスケッチされていきます。お好みの飲み物を片手に、ふたりの会話の旅をどうぞお楽しみください。
