--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -211,11 +211,11 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 :::
 
 ::: voice-father
-お父さん「主観が入るとバイアスが生じやすいとはいえるけど、そんなに単純じゃないかな。調査がいい加減だったら、死亡が完全に特定できず、死亡率を過小評価することだってあるもの」
+お父さん「主観が入るとバイアスが生じやすいとはいえるけど、そんなに単純じゃないかな。調査がいい加減だったら、死亡が完全に特定できず、死亡率を過小評価することだってあるもの。ちょっとたばこを吸っていい？」
 :::
 
 ::: voice-daughter
-私「それはわかるよ。死亡調査って大変だもの」
+私「いいよ。死亡調査って大変だよね」
 :::
 
 ::: voice-father
@@ -281,7 +281,7 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 :::
 
 ::: voice-father
-お父さん「**Kaplan-Meier曲線を**描くとき、**競合リスク**の扱いによってはバイアスが生じるってことをみせてあげるよ。前に使ったRスクリプトをいじるだけですぐ終わるから。論より証拠で、シミュレーションデータをみれば統計的なバイアスってどんなものか実感できる」
+お父さん「**Kaplan-Meier曲線を**描くとき、**競合リスク**の扱いによってはバイアスが生じるってことをみせてあげるよ。前に使ったRスクリプトをいじるだけですぐ終わるから。たばこを一本吸う間にね。論より証拠で、シミュレーションデータをみれば統計的なバイアスってどんなものか実感できる」
 :::
 :::::::::::::::::::::::::::::::::
 
