effects and time

--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -191,7 +191,7 @@ Keywords: binary outcome, effect measure, observational study, scientific writin
 お父さん「それとは別。うん、そこは日本語特有の言い回しだから間違えやすいよね。この場合の率は百分率の意味で使っているんだけど、疫学でいう**率（rate）**とは計算が違うんだ。ややこしいのはそこだけじゃない。この場合の95%は、プラセボに比べて発症リスクが95%って意味だから」
 :::
 
-- ワクチン有効率は、疫学でいう率ではない
+- ワクチン有効率は疫学一般で用いられる率ではない
 - プラセボ効果との相対比較のための指標
 
 ::: voice-daughter
@@ -199,7 +199,7 @@ Keywords: binary outcome, effect measure, observational study, scientific writin
 :::
 
 ::: voice-father
-お父さん「違う違う。プラセボの効果との相対比較。プラセボを打ったときに比べ、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話ではほとんど誤解されて伝わっちゃう。"リスク"までさかのぼらないと、わからないと思う。ちょっと、そこにある紙ナプキンとペンをとって。式で書いてあげるよ。いくつか疫学の指標を書くけど、“98%という数字はどのリスクとどのリスクをどう比べているのか”だけが、はっきりすればいい。そのためには、こういう分割表で集計したデータを頭に浮かべられるといい」
+お父さん「違う違う。プラセボの効果との相対比較。プラセボを打ったときに比べ、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話ではほとんど誤解されて伝わっちゃう。"リスク"までさかのぼらないと、わからないと思う。ちょっと、そこにある紙ナプキンとペンをとって。式で書いてあげるよ。いくつか疫学の指標を書くけど、“98%という数字はどのリスクとどのリスクをどう比べているのか”だけが、はっきりすればいい。そのために、こういう分割表で集計したデータを頭に浮かべよう」
 :::
 
 ::::::::::::::::::::::::::::::::: 
@@ -258,7 +258,7 @@ $$
 :::
 
 ::: voice-father
-お父さん「もう慣れちゃったのかもね。でも、式で書かないと、ワクチン有効率がなんなのか、わからないでしょ。それにね、この数字には数式よりずっと本質的な意味がある」
+お父さん「もう慣れちゃったのかもね。でも、式で書かないと、ワクチン有効率がなんなのか、わからないでしょ。それにね、この数字には数式よりずっとリアルな意味がある」
 :::
 
 ::: voice-daughter
@@ -266,7 +266,7 @@ $$
 :::
 
 ::: voice-father
-お父さん「いや、聞けばすぐわかるよ。ワクチン有効率の数字は、臨床データから推定されたものでしょ。たくさんの参加者を対象に臨床試験を行って、実際に観察された結果を、ぎゅっと要約したものが、この数字なんだ。でも、データ上でどんな結果が観察されたか、ワクチン有効率だけでは伝わらないでしょ。こういうのを"数字が独り歩きする"っていうんだ」
+お父さん「いや、聞けばすぐわかるよ。ワクチン有効率の数字は、臨床データから推定されたものでしょ。たくさんの参加者を対象に臨床試験を行って、実際に観察されたという経験が、ぎゅっと要約された結果が、この数字なんだ。でも、データ上でどんな結果が観察されたか、ワクチン有効率だけでは伝わらないでしょ。こういうのを"数字が独り歩きする"っていうんだ」
 :::
 
 ::: {.callout-note appearance="simple"  title="ワクチンランダム化臨床試験の数値例"}
@@ -287,13 +287,12 @@ $VE=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 :::
 
 ::: voice-daughter
-私「確かにね。95%有効っていう数字だけみると、”ほぼ確実に救える”って意味に捉えがちだけど、よく考えたらワクチンにそこまでの効果はないよね。統計を使ったレトリックに騙されちゃいそう」
+私「確かにね。95%有効っていう数字だけみると、”ほぼ確実に救える”って意味に捉えがちだけど、よく考えたらワクチンにそこまでの効果はないよね。パーセントを使ったレトリックに騙されちゃいそう」
 :::
 
 ::: voice-father
-お父さん「でも日常会話でそんなこと気にしてられないでしょ。だから間違って使われることが多い。**パーセント表記が逆に誤解を生んでる**疫学の指標は、他にもあるよ」
+お父さん「解析結果はね。解釈するときに言語そのもの以外の情報が不可欠なんだ。同じ98%でも奏効率とワクチン有効率は別の計算だからね。でも日常会話でそんなこと気にしてられないでしょ。だから間違って使われることが多い。**パーセント表記が逆に誤解を生んでる**疫学の指標は、他にもあるよ」
 :::
-
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
@@ -310,7 +309,7 @@ $VE=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 ::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は4です。**
 
-割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m2です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、100%を超えなく、そして人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
+割合、率、比の3つの違いについて説明しましょう。比とは、ある量を別の量で割ったもののことです。たとえば、BMIは体重を身長で割ったものですから比の一種で、単位はkg/m<sup>2</sup>です。割合は、一部の数を全体の数で割ったもの（言い換えると、分母が分子を含んでいるもの）です。割合は、もちろん2値データや分類データを要約するために用いられる指標ですよね。この指標は、言葉の定義からいって、比の一種です。しかし、割合は、100%を超えなく、そして人数を人数で割っているためキャンセルして単位がない（無単位）という特徴があります。割合と区別してほしいのが率です。たとえば胃がんの発生率（incidence rate of gastric cancer）というと、一定時間に胃がんが発生するスピードで、人年法（胃がんの発生数/観察人年）で計算されます。人数を人数×年で割っているため、単位は1/年（より一般には1/時間）です。
 
 「打率」は安打数÷打数であり、「割合」になります。
 
