--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -272,7 +272,7 @@ $$
 :::
 
 ::: voice-father
-お父さん「でしょ。それにね、ただの計算式とみちゃうとかえって混乱しがちかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
+お父さん「でしょ、言葉と認識にギャップがあるよね。それに、ただの計算だと思うとかえって理解しにくいところもある。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
 :::
 
 ::: voice-daughter
@@ -280,7 +280,16 @@ $$
 :::
 
 ::: voice-father
-お父さん「残りの2人は、本当はがんだったのに、検診では見つけられなかった。そのため、67歳と73歳で亡くなった。つまり、がん検診後の生存期間は7年と13年。じゃあ、仮にこの2人を60歳のとき根治切除できたとしたら、生存期間は何割長くなるだろう」
+お父さん「残りの2人は、本当はがんだったのに、検診では見つけられなかった。そのため、67歳と73歳で亡くなった。つまり、がん検診後の生存期間は7年と13年」
+:::
+
+- 60歳がん検診で陽性になり根治手術、71歳まで生存
+- 60歳がん検診で陽性になり根治手術、79歳まで生存
+- 60歳がん検診で偽陰性、手術を受けず、67歳まで生存
+- 60歳がん検診で偽陰性、手術を受けず、73歳まで生存
+
+::: voice-father
+お父さん「仮にこの2人を60歳のとき根治切除できたとしたら、生存期間は何割長くなるだろう」
 :::
 
 ::: voice-daughter
@@ -316,7 +325,7 @@ $$
 :::
 
 ::: voice-daughter
-私「ふーん。じゃあワクチン有効率はどうなの？」
+私「ふーん。じゃあ効果の指標はどれも、単に数式が違うだけじゃなくて"どの集団について語っているか"という言語の問題が潜んでいるんだね。診療科で論文読むことがあるけど、まさか指標によって集団が変わるなんて認識してないんじゃないかな。この前のワクチン有効率はどうなの？」
 :::
 
 ::: voice-father
