--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example"
+title: "From Risk and Rate to Survival and Hazard"
 format:
   html:
     toc: true
@@ -148,10 +148,10 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Effects and time V − Distinguishing Time-Point, Time-Constant, and Time-Varying Effects
+# Effects and time V − From Risk and Rate to Survival and Hazard
 
 ::: {.serif-block .text-right}
-Keywords: binary outcome, effect measure, survival/competing-risk, scientific writing
+Keywords: binary outcome, effect measure, survival/competing-risk
 :::
 
 ------------------------------------------------------------------------
@@ -176,7 +176,7 @@ Keywords: binary outcome, effect measure, survival/competing-risk, scientific wr
 :::
 
 ::: voice-daughter
-私「寄与割合とかリスク比とかって、時間とともに変化するっていうけど、ハザード比は変化しないんだっけ」
+私「生存曲線からある時点の生存確率を読み取ると、1-リスクになっているっていう意味ね。うんうん。そして、疫学の教科書に出てくる率（rate）が、生存時間解析のハザード（hazard）に対応しているっていうのもわかる。でも、気になるのは**ハザード比（hazard ratio）**なんだ。寄与割合とかリスク比とかって、時間とともに変化するっていうけど、ハザード比は変化しないんだっけ」
 :::
 
 ::: voice-father
@@ -184,7 +184,7 @@ Keywords: binary outcome, effect measure, survival/competing-risk, scientific wr
 :::
 
 ::: voice-daughter
-私「リスク比は変化するけどハザード比は変化しないの？ぴんとこないなあ」
+私「リスク比は変化するけどハザード比は変化しないの？矛盾してない？」
 :::
 
 ::: voice-father
@@ -258,19 +258,27 @@ generate_data <- function(n=200, hr1, hr2) {
 :::
 
 ::: {.callout-note appearance="simple" title="cifplot()によるKaplan-Meier曲線"}
-イメージしやすいように、以前`cifmodeling`パッケージの`cifplot()`で描いたKaplan–Meier曲線を置いておきます。
+イメージしやすいように、以前`cifplot()`で描いたKaplan–Meier曲線と`coxph()`の結果を置いておきます。
 
 ```{r warning=FALSE}
 # devtools::install_github("gestimation/cifmodeling") #インストールが必要なら実行 
 library(cifmodeling)
 set.seed(46)
 dat <- generate_data(hr1=2, hr2=1.5) #再発ハザード比2, 死亡ハザード比1.5のデータ生成
-
 cifplot(Event(time_os, status_os) ~ stoma,
   data         = dat,
   outcome.type = "survival",
   label.y      = "Overall survival"
 )
+```
+:::
+
+::: {.callout-note appearance="simple"  title="coxph()の実行"}
+```{r warning=FALSE}
+# install.packages("survival") #インストールが必要なら実行
+library(survival)
+fit <- coxph(Surv(time_os, status_os) ~ stoma, data = dat)
+summary(fit)
 ```
 :::
 
@@ -304,136 +312,21 @@ $M = \frac{\log 2}{\lambda} \approx \frac{0.7}{\lambda}$
 :::
 ::::::::::::::::::::::::::::::::: 
 
-### ハザード比が意味を持つとき、持たないとき
+::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
 
-::: {.callout-note appearance="simple" title="リスクとハザード比の関係"}
+生存時間中央値を報告してよいのは、どのような場合でしょうか？
 
-群1と群2のアウトカムを比較する状況を考えましょう。群1の時点$x$の疾患リスクを$\pi_1$、群2の時点$x$の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
-
-上で述べた関係式を適用すると、指数分布の下で、ハザード比は以下のように表現することができます。ハザード比と、ハザード・生存時間中央値・疾患リスクの関係を表す式ですね。
-
-$$
-HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(1-\pi_1)}{\mathrm{log}(1-\pi_2)}
-$$
-
-指数分布では、ハザードは時間を通じて一定でした。その一方で、Cox比例ハザードモデルでは、ハザードを時間の関数$\lambda_1(x)$と$\lambda_2(x)$と考え、しかも両者が比例関係にあると仮定します。
-
-$$
-HR=\frac{\lambda_1(x)}{\lambda_2(x)}
-$$
+1.  目安としてサンプルサイズが100人以上のとき
+2.  すべての対象者が予定された追跡期間を終了したとき
+3.  半数以上の対象者がイベントを起こしたとき
+4.  1、2、3すべて誤り
 :::
 
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「ちょっと疲れてきたな。えと、指数分布とCox比例ハザードモデルがあるわけね？でも同じ式じゃないかな？書き間違えてない？」
+::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
+-   **正解は3です**
+
+生存時間データでは一部の対象者で打ち切りがあること（これ以上生存時間が長いことしかわからない）、中央値（median）の定義を思い出してください。半数以上の対象者がイベントを起こし、生存時間が確定しないと、生存確率は50%以下になりません。
 :::
-
-::: voice-father
-お父さん「指数分布の式はね、ハザードが$x$に依存しないでしょ。つまりハザード自体が一定なんだ。Cox回帰の方は$\lambda_1(x)$と$\lambda_2(x)$は時間の関数なんだけど、ハザード比だけが一定っていうことを表している。これが比例ハザード性だよ。このKaplan-Meier曲線をみてよ（Mok, et al, 2009）。生存曲線がクロスした有名なケースなんだ」
-:::
-
-::: voice-daughter
-私「よかった、数式ばっかじゃねむくなる」
-:::
-:::::::::::::::::::::::::::::::::
-
-![](clinical-trial-3.png)
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「これはステージIIIB～IVの肺がん患者の臨床試験で、ゲフィチニブと化学療法を比較している。図Aでは6ヶ月まではゲフィチニブ群の無増悪生存確率が低く、それ以降は高くなっているでしょ。こういうときは比例ハザード性が成り立っていないから、ハザード比に意味はない」
-:::
-
-::: voice-daughter
-私「どうしてこうなっちゃったの？」
-:::
-
-::: voice-father
-お父さん「それはゲフィチニブがEGFR変異陽性の肺がん患者に特に有効だったからだといわれている。図Bは、EGFR変異陽性だった261人を対象にしたKaplan-Meier曲線なんだけど、生存曲線はクロスせず、最初から最後までゲフィチニブ群の方が化学療法群より予後がいいでしょ」
-:::
-
-::: voice-daughter
-私「そうだね。この試験のKaplan-Meier曲線では、治療成績が交差して、どっちが効くのか悩ましいってことはわかるよ、数式はともかくとして」
-:::
-
-::: voice-father
-お父さん「はっきりいうとね、ハザードやハザード比が直感的にわかる人の方が少ないよ。だから安心していい」
-:::
-
-::: voice-daughter
-私「え、そうなの？なんか“知らないといけない基本”みたいに思って焦った」
-:::
-
-::: voice-father
-お父さん「ハザードはね、患者さんの健康状態を表す“見えない時計”だと思うといい」
-:::
-
-::: voice-daughter
-私「見えない時計？」
-:::
-
-::: voice-father
-お父さん「治療Aを受けた患者は、ちょっと速く進む時計を持っている。治療Bの人は、少し遅い時計を持っている。ハザード比は、2つの時計が“どれくらい違う速さで動くか”の比なんだ」
-:::
-
-::: voice-daughter
-私「なるほど、時間が進むスピードの違いなら、イメージしやすいかも」
-:::
-
-::: voice-father
-お父さん「ただし、ここが重要。時計の進み方は、必ずしも一定とは限らない。最初は治療Bが有利でも、途中から追いつかれることだってある」
-:::
-
-::: voice-daughter
-私「それ、実際の患者さんでもあるかも！」
-:::
-
-::: voice-father
-お父さん「まとめると、このたとえ話の主張はこんなこと。
-
-> ハザード比は、2つの時計が“どれくらい違う速さで動くか”の比に例えられる。
-> 比例ハザード性が成り立たないと、最初は一方の治療が有利でも、途中から追いつかれることもある
-
-それなのに多くの論文で“ハザード比＝一定”という前提で解析する。Cox回帰が標準的に使われるからね。だから、比例ハザード性が破綻すると、ハザード比の解釈が急に怪しくなる」
-:::
-::::::::::::::::::::::::::::::::: 
-
-::: {.callout-note appearance="simple" title="シミュレーションデータにおける時点ごとのリスク比の推定"}
-
-さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、`cifmodeling`の`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点ごとのリスク比も推定できます。
-
-先ほどのシミュレーションデータを使って、`time.point`を変えた`polyreg()`を当てはめることで、術後5年・10年・20年時点の死亡リスク比を推定します。アウトカム（OS）は`Event(time_os,status_os)`、曝露変数であるストーマの有無は`exposure="stoma"`で指定しています。
-
-```{r warning=FALSE}
-rr_at_5 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
-                    effect.measure1="RR", time.point=5, outcome.type="survival")
-summary(rr_at_5)
-rr_at_10 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
-                    effect.measure1="RR", time.point=10, outcome.type="survival")
-summary(rr_at_10)
-rr_at_20 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
-                    effect.measure1="RR", time.point=20, outcome.type="survival")
-summary(rr_at_20)
-```
-
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「ハザード比は一定のデータを作ったのに、リスク比は1.367、1.126、1.078と徐々に小さく推定されてる。冒頭のKaplan-Meier曲線でも、最初の5年あたりがいちばん差が開いているもんね。時間と効果って、分けて考えられないんだね」
-:::
-
-::: voice-father
-お父さん「だってそうでしょ？効果って時間とともに生じるものだもの。それが因果の定義のひとつでもある。時間とともに効果の大きさが変化するなら、ハザード比に頼っちゃだめ。もっと丁寧に時点ごとにリスクを比べないと」
-:::
-
-::: voice-daughter
-私「そういわれると納得感あるなあ、ハザード比だけ使えばいいって方がシンプルで私好みだったんだけど。生存曲線を見るっていうのは、因果効果に時間の視点を加えるってことなんだね」
-:::
-
-### 文献
-
-- Mok TS, Wu YL, Thongprasert S, Yang CH, Chu DT, Saijo N, Sunpaweravong P, Han B, Margono B, Ichinose Y, Nishiwaki Y, Ohe Y, Yang JJ, Chewaskulyong B, Jiang H, Duffield EL, Watkins CL, Armour AA, Fukuoka M. Gefitinib or carboplatin-paclitaxel in pulmonary adenocarcinoma. N Engl J Med 2009;361(10):947-57
 
 :::::::::::::::::::::::::::::::::
 ### End of the episode on Effects and time
